285		C++			Fixed an old bug with dead landless nations (some were just mostly dead, not all dead).
286		C++			Now remove enough older landless nations.
287		C++			Read certain settings (V2 directory, game type, etc) from configuration.txt
288		C++			Refactor reading of localized province names.
289		C++			Administrative republics convert to democracies, not monarchies.
290		C++			Write all countries to the file, even if they don't exist yet. Fixes releasing cultural unions, etc.
291		C++			A little output cleanup.
292		N/A			readme updated and expanded
					ADAGE mod goverment mappings added for posterity
293		N/A			Readme updated
294		N/A			Build and test changes for configuration file.
295		C++			Updates to literacy calculations.
296		C++			Update build config for only one output version.
297		C++			Removed some normally hidden compiler warnings.
298		C++			Updated tech conversion
299		C++			All cultures from EU3 cultural unions now accepted.
300		C++			Further tech updates.
301		C++			Tweaked pop conversion of bureaucrats, aristocrats, and capitalists.
302		C++			Tweaked pop conversion of officers, soldiers, artisans, clerks, and craftsmen.
303		N/A			Updated Readme file.
304		N/A			Added TO-Prussia-Germany save game.
305		C++			Don't place union cores on (or spawn expeditionary armies from) pagan conquests.
306		C++			Comment unions.txt
307		C++			Fix unions.txt comment for Poland
308		C++			Updated Readme.txt
309		C++			Massive overhaul of DW pop conversion.
310		C++			Better logging of EU3 type check errors.
311		C++			Culture rating increases prestige.
312		C++			Army and Navy tradition give leadership.
313		C++			Elections one month after game start.
314		C++			Landless nation removal option in configuration.txt.
315		C++			Cleaned up EU3Country a little.
316		C++			Tech Schools.
317		C++			Deleted a bunch of old files.
318		C++			Updated build.bat.
319		C++			Tech schools now come from V2 install.